--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
     "reactstrap": "8.0.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "4.3.2"
   },
   "devDependencies": {
