--- a/src/Login/package.json
+++ b/src/Login/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "3.0.1",
     "reactflexing": "1.0.0",
     "redux": "4.0.4",
+    "redux-thunk": "^2.3.0",
     "styled-components": "4.3.2"
   },
   "devDependencies": {
